@@ -1,0 +1,9 @@
+TOP = ..
+
+include $(TOP)/mk/config.mk
+
+MAIN = Driver.hs
+
+APPNAME = gendoc 
+
+include $(TOP)/mk/common.mk
